# zkill-filter-bot

./: .gitignore  LICENSE  README.md  config.ini  stack.yaml  zkill-filter-bot.cabal
app/: Main.hs
src/: Esi.hs  Filter.hs  FilterParser.hs  Lib.hs
src/Data/Zkill/: Alliance.hs  ApiObject.hs  Attacker.hs  Character.hs  Corporation.hs  Icon.hs  Item.hs  ItemType.hs  Killmail.hs  Package.hs  Position.hs  ShipType.hs  SolarSystem.hs  Victim.hs  War.hs  WeaponType.hs  Zkillboard.hs
test/: ParserTest.hs  Spec.hs
