name:                zkill-filter-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zkill-filter-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          chernoff.alex1@gmail.com
copyright:           2017 Alexander Chernoff
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Lib
                      Filter
                      FilterParser
                      Data.Zkill.ApiObject
                      Data.Zkill.Attacker
                      Data.Zkill.Item
                      Data.Zkill.Killmail
                      Data.Zkill.Package
                      Data.Zkill.Position
                      Data.Zkill.Victim
                      Data.Zkill.Zkillboard

  build-depends:      base >= 4.7 && < 5
                    , discord-hs
                    , pipes
                    , bytestring
                    , aeson
                    , vector
                    , text
                    , conduit
                    , conduit-extra
                    , http-types
                    , http-client
                    , http-client-tls
                    , http-conduit
  default-language:   Haskell2010

executable zkill-filter-bot-exe
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , zkill-filter-bot
                    , discord-hs
                    , pipes
                    , bytestring
                    , aeson
                    , vector
                    , text
                    , conduit
                    , conduit-extra
                    , http-types
                    , http-client
                    , http-client-tls
                    , http-conduit
                    , config-ini
  default-language:    Haskell2010

test-suite zkill-filter-bot-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , zkill-filter-bot
                    , discord-hs
                    , pipes
                    , bytestring
                    , aeson
                    , vector
                    , text
                    , HUnit
                    , conduit
                    , conduit-extra
                    , http-types
                    , http-client
                    , http-client-tls
                    , http-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/a-chernoff/zkill-filter-bot
